feat: project data source and resource
