# internal/apiclient/api.yaml
@@ -77,6 +77,117 @@ paths:
                         $ref: "#/components/schemas/ObjectList"
         401:
           $ref: "#/components/responses/Unauthorized"
+  /dashboard/organizations/{organizationId}/projects:
+    get:
+      operationId: getOrganizationProjects
+      parameters:
+        - name: organizationId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                  - object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Project"
+                  object:
+                    $ref: "#/components/schemas/ObjectList"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+    post:
+      operationId: createOrganizationProject
+      parameters:
+        - name: organizationId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - title
+                - geography
+              properties:
+                title:
+                  type: string
+                geography:
+                  type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Project"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+  /dashboard/organizations/{organizationId}/projects/{projectId}:
+    get:
+      operationId: getOrganizationProject
+      parameters:
+        - name: organizationId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: projectId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Project"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+    post:
+      operationId: updateOrganizationProject
+      parameters:
+        - name: organizationId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: projectId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                archive:
+                  type: boolean
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Project"
+        401:
+          $ref: "#/components/responses/Unauthorized"
 components:
   securitySchemes:
     bearerAuth:
@@ -203,6 +314,8 @@ components:
           enum:
             - project
         organization_id:
+          type: string
+        role:
           type: string
         title:
           type: string
